changed README file and also added screenshots and link to my web-site

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,19 +9,18 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>Welcome to my portfolio! My name is Johnny and I'm a passionate developer with a strong focus on web development, software engineering, and creative technology solutions.
+          My work spans from designing user-friendly interfaces to building robust back-end systems and interactive 3D experiences.</p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+        <p>Take a look at some of the exciting projects I’ve worked on, from e-commerce platforms to simulation software.
+          I’m constantly learning and pushing boundaries to stay ahead in this fast-paced industry </p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
+        <a href="https://github.com/Jsharsh33v" class="btn btn-lg btn-outline">
+          <i class="fab fa-github"></i> View My GitHub
         </a>
-      </div>
+      </div>    
     </div>
   </div>
 </section>
