--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/profile.png" alt="profile-pic" />
+        <img class="img-responsive profile-pic" src="img/profile1.png" alt="profile-pic" />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
@@ -13,3 +13,10 @@
     </div>
   </div>
 </header>
+
+<style>
+.profile-pic {
+  width: 250px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+</style>
